fx2j-parser/src/test/resources/element/valid/script-reference-with-charset.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:script source="test.js" charset="US-ASCII"/>
</VBox>