fx2j-parser/src/test/resources/element/invalid/script-source-child.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:script source="test.js">
        <text/>
    </fx:script>
</VBox>